Added tinyLocator to NoSQL and agreement data